--- a/css/input.less
+++ b/css/input.less
@@ -16,6 +16,10 @@
         color: red;
     }
 
+    .form-group.auto-width > input {
+        width: auto;
+    }
+
 }
 
 
